heartspark-deployment/deployments/heartspark-core/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heartspark-core
  labels:
    name: heartspark-core
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    name: heartspark-core
