heartspark-deployment/deployments/heartspark-core/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heartspark-core
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
  labels:
    service: heartspark-core
spec:
  tls:
    - hosts:
        - www.heartspark.singles
      secretName: letsencrypt-staging
  rules:
    - host: www.heartspark.singles
      http:
        paths:
          - backend:
              serviceName: heartspark-core
              servicePort: 80
            path: /
